--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,30 +1,23 @@
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
-    background-color: #f8f9fa;
-    /* Light gray background */
+html, body {
+    margin: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #ffffff;
-    /* White background */
-    border-radius: 8px;
-    /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Shadow */
+.mb-3 {
+    padding: 10px 0;
+    
+}
+
+.form-control:hover {
+    border: 1px solid blue;
+}
+
+#generateButton {
+    margin-top: 20px;
+    padding: 5px;
 }
 
 #visualization {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ced4da;
-    /* Light gray border */
-    border-radius: 4px;
-    /* Rounded corners */
-    font-size: 18px;
-    text-align: left;
+    margin-top: 50px;
+
 }
